syntax = "proto3";

package playerspb;

option go_package = "github.com/FSpruhs/kick-app/backend/player/playerspb";

service PlayersService {
  rpc ConfirmPlayer(ConfirmPlayerRequest) returns (ConfirmPlayerResponse);
  rpc ConfirmGroupLeavingUser(ConfirmGroupLeavingUserRequest) returns (ConfirmGroupLeavingUserResponse);
}

message ConfirmPlayerRequest {
  string playerId = 1;
  string groupId = 2;
  int32 inviteLevel = 3;
}

message ConfirmPlayerResponse {}

message ConfirmGroupLeavingUserRequest {
  string userId = 1;
  string groupId = 2;
}

message ConfirmGroupLeavingUserResponse {}